--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-	<title>Val web card</title>
+	<title>Val greetings</title>
 	<style> 
 		body {
 	background-image: url(val.jpg);
