--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Your browser does not support the audio element.
 <h5 id="memo"></h5></div>
 <script>
 function mySend() { 
-  document.getElementById("memo").innerHTML = "<p>Dear Yunus,</p> \n <p>I hope this find you well.</p> <p>I am so grateful to you for your kindness and hope you don't mind that I put down in words how wonderful life is while you're in the world.</p> <p>Just letting you know I\'m thinking of you and wish you more love and hapiness, Happy Val!</p> Love, Queendalin";
+  document.getElementById("memo").innerHTML = "<p>Dear Linus,</p> \n <p>I hope this find you well.</p> <p>I am so grateful to you for your kindness and hope you don't mind that I put down in words how wonderful life is while you're in the world.</p> <p>Just letting you know I\'m thinking of you and wish you more love and hapiness, Happy Val!</p> Love, Queendalin";
 }
 </script>
 
